tests/snapshots/unicode_edge_cases_test__unicode_cursor_movement.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
café[ ]résumé
