tests/snapshots/unicode_edge_cases_test__unicode_delete.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[é]llo
