tests/snapshots/unicode_edge_cases_test__unicode_diw.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 2

Buffer:
hello [ ]test
