tests/snapshots/unicode_edge_cases_test__unicode_word_boundary.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hello_世界_tes[t]
