tests/snapshots/unicode_edge_cases_test__word_motion_with_tab.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
hello	[w]orld
