tests/snapshots/unicode_edge_cases_test__yank_emoji_sequence.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
😀😁😂😀😁😂
[ ]
