tests/snapshots/unicode_edge_cases_test__yank_mixed_unicode.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
hello 世界 😀 testhello 世界 😀 test
[ ]
