tests/snapshots/unicode_edge_cases_test__yank_unicode_word.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:16
Lines: 1

Buffer:
hello 世界 test世界 [ ]
